[gd_scene load_steps=29 format=3 uid="uid://knkqoq6bo6nn"]

[ext_resource type="Script" path="res://Characters/Player/player.gd" id="1_n04aa"]
[ext_resource type="PackedScene" uid="uid://cl4yaba8l8sp7" path="res://Characters/character_mover.tscn" id="2_at7ue"]
[ext_resource type="PackedScene" uid="uid://bbh35m1aqy2kb" path="res://Weapons/Assets/machete.glb" id="3_di42t"]
[ext_resource type="PackedScene" uid="uid://cjv8n5ibe1vqw" path="res://Characters/health_manager.tscn" id="3_j1i5i"]
[ext_resource type="Script" path="res://Weapons/Weapon.gd" id="4_2ckdu"]
[ext_resource type="Script" path="res://Characters/Player/WeaponManager.gd" id="4_73qca"]
[ext_resource type="PackedScene" uid="uid://bwgkhel37ehkt" path="res://Weapons/Assets/machinegun.glb" id="4_dr4oy"]
[ext_resource type="PackedScene" path="res://Weapons/Assets/shotgun.glb" id="5_jw7cq"]
[ext_resource type="PackedScene" path="res://Weapons/Assets/rocketlauncher.glb" id="6_5r5bx"]
[ext_resource type="PackedScene" uid="uid://5m7348ba7i77" path="res://Weapons/hit_scan_bullet_emitter.tscn" id="6_lkpxq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ce6wn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_260ep"]

[sub_resource type="Animation" id="Animation_rvk4v"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3cgq8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_o2bun"]
resource_name = "Attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.000584692, -0.00578856, 0.015364), Vector3(-0.00239965, 0.0542775, 0.0659711), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.360078, -0.0380377, -0.219915), Vector3(-1.19089, 0.541504, -0.685246), Vector3(-0.772185, 2.6938, -2.32626), Vector3(-1.16638, 0.333369, -0.367001), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iurm"]
_data = {
"Attack": SubResource("Animation_o2bun"),
"Idle": SubResource("Animation_rvk4v"),
"RESET": SubResource("Animation_3cgq8")
}

[sub_resource type="Animation" id="Animation_bvnot"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/machinegun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lif3t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/machinegun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_j0ck2"]
resource_name = "Attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/machinegun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.638199), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yw5gd"]
_data = {
"Attack": SubResource("Animation_j0ck2"),
"Idle": SubResource("Animation_bvnot"),
"RESET": SubResource("Animation_lif3t")
}

[sub_resource type="Animation" id="Animation_vhuub"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hiadw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_f7j5v"]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 1.20291), Vector3(0, 0, -0.337085), Vector3(0, 0, -0.337085), Vector3(0, -1.03607, -0.337085), Vector3(0, 0, -0.337085), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.473996, 0, 0), Vector3(1.51245, 0, 0), Vector3(1.51245, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vya4o"]
_data = {
"Attack": SubResource("Animation_f7j5v"),
"Idle": SubResource("Animation_vhuub"),
"RESET": SubResource("Animation_hiadw")
}

[sub_resource type="Animation" id="Animation_4l1d5"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_u4mfn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5c4mx"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.83725), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xoa0n"]
_data = {
"Attack": SubResource("Animation_5c4mx"),
"Idle": SubResource("Animation_4l1d5"),
"RESET": SubResource("Animation_u4mfn")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 6
collision_mask = 3
script = ExtResource("1_n04aa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ce6wn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_260ep")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="WeaponManagerNode" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0841513, -0.2785)
script = ExtResource("4_73qca")

[node name="Weapons" type="Node3D" parent="Camera3D/WeaponManagerNode"]

[node name="Machete" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0574909, -0.0539272, 0.114469)

[node name="Graphics" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons/Machete"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="machete" parent="Camera3D/WeaponManagerNode/Weapons/Machete/Graphics" instance=ExtResource("3_di42t")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/WeaponManagerNode/Weapons/Machete"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_5iurm")
}

[node name="MachineGun" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0574909, -0.010743, 0.170577)
visible = false
script = ExtResource("4_2ckdu")
automatic = null
damage = null
ammo = null
attackRate = null

[node name="Graphics" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons/MachineGun"]

[node name="machinegun" parent="Camera3D/WeaponManagerNode/Weapons/MachineGun/Graphics" instance=ExtResource("4_dr4oy")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/WeaponManagerNode/Weapons/MachineGun"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_yw5gd")
}

[node name="BulletEmitters" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons/MachineGun"]

[node name="HitScanBulletEmitter" parent="Camera3D/WeaponManagerNode/Weapons/MachineGun/BulletEmitters" instance=ExtResource("6_lkpxq")]

[node name="Shotgun" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0574909, 0.002738, 0.194899)
visible = false

[node name="Graphics" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons/Shotgun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="shotgun" parent="Camera3D/WeaponManagerNode/Weapons/Shotgun/Graphics" instance=ExtResource("5_jw7cq")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/WeaponManagerNode/Weapons/Shotgun"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_vya4o")
}

[node name="RocketLauncher" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.11968, 0.0212734, 0.148416)
visible = false

[node name="Graphics" type="Node3D" parent="Camera3D/WeaponManagerNode/Weapons/RocketLauncher"]

[node name="rocketlauncher" parent="Camera3D/WeaponManagerNode/Weapons/RocketLauncher/Graphics" instance=ExtResource("6_5r5bx")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/WeaponManagerNode/Weapons/RocketLauncher"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_xoa0n")
}

[node name="CharacterMover" parent="." instance=ExtResource("2_at7ue")]
gravity = 45.0
stop_drag = 0.3

[node name="HealthManager" parent="." instance=ExtResource("3_j1i5i")]
